FBISCC-50: fix emails and long words not wrapping on check your answers page

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -51,6 +51,10 @@ tr {
   margin: 0.5em 0 0 0;
 }
 
+.confirm-value {
+  word-break: break-word;
+}
+
 input[type="submit"].link {
   background: none;
   border: none;
